--- a/configs/datasets/coco_detection.yml
+++ b/configs/datasets/coco_detection.yml
@@ -3,15 +3,15 @@ num_classes: 80
 
 TrainDataset:
   name: COCODataSet
-  image_dir: train2017
-  anno_path: annotations/instances_train2017.json
+  image_dir: images
+  anno_path: annotations/instance_train.json
   dataset_dir: dataset/coco
   data_fields: ['image', 'gt_bbox', 'gt_class', 'is_crowd']
 
 EvalDataset:
   name: COCODataSet
-  image_dir: val2017
-  anno_path: annotations/instances_val2017.json
+  image_dir: images
+  anno_path: annotations/instance_val.json
   dataset_dir: dataset/coco
   allow_empty: true
 
