modify fasternet.py same to PaddleClas

--- a/configs/runtime.yml
+++ b/configs/runtime.yml
@@ -5,7 +5,7 @@ use_npu: false
 log_iter: 20
 save_dir: output
 snapshot_epoch: 1
-print_flops: true
+print_flops: false
 print_params: false
 
 # Exporting the model
