--- a/configs/centernet/centernet_fastnet_coco.yml
+++ b/configs/centernet/centernet_fastnet_coco.yml
@@ -16,7 +16,7 @@ FasterNet:
   embed_dim: 64
   depths: [1, 2, 8, 2]
   drop_path: 0.0
-  act_layer: ReLU
+  act_layer: GELU
 
 CenterNetDLAFPN:
   first_level: 0
@@ -25,7 +25,7 @@ CenterNetDLAFPN:
   dcn_v2: False
 
 LearningRate:
-    base_lr: 0.002
+    base_lr: 0.001
     schedulers:
     - !PiecewiseDecay
       gamma: 0.1
@@ -39,4 +39,4 @@ OptimizerBuilder:
     regularizer: NULL
 
 TrainReader:
-  batch_size: 64
+  batch_size: 32
