add eiouloss and suport diou and eiou

--- a/configs/ttfnet/_base_/ttfnet_dla34.yml
+++ b/configs/ttfnet/_base_/ttfnet_dla34.yml
@@ -3,7 +3,7 @@ pretrain_weights: https://bj.bcebos.com/v1/paddledet/models/pretrained/DLA34_pre
 
 TTFNet:
   backbone: DLA
-  neck: TTFFPN
+  neck: CenterNetDLAFPN
   ttf_head: TTFHead
   post_process: BBoxPostProcess
 
