modify diou yaml

--- a/configs/ttfnet/ttfnet_dla34_1x_diou_coco.yml
+++ b/configs/ttfnet/ttfnet_dla34_1x_diou_coco.yml
@@ -12,7 +12,7 @@ TTFHead:
     loss_weight: 1.
   wh_loss: DIoULoss
 
-DIoULoss
+DIoULoss:
   loss_weight: 5.0
 
 weights: output/ttfnet_dla34_1x_coco/model_final
