--- a/configs/ttfnet/ttfnet_dla34_1x_diou_coco.yml
+++ b/configs/ttfnet/ttfnet_dla34_1x_diou_coco.yml
@@ -10,9 +10,9 @@ TTFHead:
   hm_loss:
     name: CTFocalLoss
     loss_weight: 1.
-  wh_loss: DIoULoss
+  wh_loss: DIouLoss
 
-DIoULoss:
+DIouLoss:
   loss_weight: 5.0
 
 weights: output/ttfnet_dla34_1x_coco/model_final
