--- a/configs/datasets/mot.yml
+++ b/configs/datasets/mot.yml
@@ -5,6 +5,7 @@ num_classes: 1
 TrainDataset:
   !MOTDataSet
     dataset_dir: dataset/mot
+    # image_lists: ['crowdhuman.train']
     image_lists: ['mot17.train', 'caltech.all', 'cuhksysu.train', 'prw.train', 'citypersons.train', 'eth.train']
     data_fields: ['image', 'gt_bbox', 'gt_class', 'gt_ide']
 
@@ -14,7 +15,7 @@ EvalMOTDataset:
   !MOTImageFolder
     dataset_dir: dataset/mot
     data_root: MOT16/images/train
-    keep_ori_im: False # set True if save visualization images or video, or used in DeepSORT
+    keep_ori_im: True # set True if save visualization images or video, or used in DeepSORT
 
 # for MOT video inference
 TestMOTDataset:
