--- a/configs/datasets/mot.yml
+++ b/configs/datasets/mot.yml
@@ -5,7 +5,8 @@ num_classes: 1
 TrainDataset:
   !MOTDataSet
     dataset_dir: dataset/mot
-    image_lists: ['mot17.train', 'caltech.all', 'cuhksysu.train', 'prw.train', 'citypersons.train', 'eth.train']
+    # image_lists: ['mot17.train', 'caltech.all', 'cuhksysu.train', 'prw.train', 'citypersons.train', 'eth.train']
+    image_lists: ['mot17.half']
     data_fields: ['image', 'gt_bbox', 'gt_class', 'gt_ide']
 
 # for MOT evaluation
@@ -13,7 +14,7 @@ TrainDataset:
 EvalMOTDataset:
   !MOTImageFolder
     dataset_dir: dataset/mot
-    data_root: MOT16/images/train
+    data_root: MOT17/images/half
     keep_ori_im: False # set True if save visualization images or video, or used in DeepSORT
 
 # for MOT video inference
