--- a/configs/runtime.yml
+++ b/configs/runtime.yml
@@ -5,8 +5,8 @@ use_npu: false
 log_iter: 20
 save_dir: output
 snapshot_epoch: 1
-print_flops: true
-print_params: true
+print_flops: false
+print_params: false
 # Exporting the model
 export:
   post_process: True  # Whether post-processing is included in the network when export model.
